syntax = "proto3";

package transactions;

service TransactionService {
    rpc CreateTransaction (TransactionRequest) returns (TransactionResponse);
    rpc ValidateTransaction (ValidationRequest) returns (ValidationResponse);
}

message TransactionRequest {
    string id = 1;
    int32 sender_account = 2;
    int32 receiver_account = 3;
    double amount = 4;
}

message TransactionResponse {
    string status = 1;
    string transaction_id = 2;
}

message ValidationRequest {
    string transaction_id = 1;
}

message ValidationResponse {
    string status = 1;
}
